--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
 import Header from '../components/Header.astro'
+import Carrusel from '../components/Carrusel.astro'
 ---
 
 <Header></Header>
-
+<Carrusel></Carrusel>
 <style is:global>
 html {
 	font-size: 62.5%;
@@ -11,7 +12,7 @@ html {
 	padding: 0;
 }
 body {
-	background-color: #2112;
+	background-color: #e8e8e8;
 	margin: 0;
 	padding: 0;
 }
